# k8s-version-looker

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/k8s_version_looker/: __init__.py  client.py  formatters.py  main.py  models.py
tests/: __init__.py  test_client.py  test_formatters.py  test_models.py
