[project]
name = "k8s-version-looker"
version = "0.1.0"
description = "A tool to check Kubernetes cluster versions and node information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8s_version_looker"]

[project.scripts]
k8s-version-looker = "k8s_version_looker.main:main"
